[gd_scene load_steps=10 format=3 uid="uid://cw8de1i83h7br"]

[ext_resource type="Texture2D" uid="uid://dd4he354ypsuj" path="res://assets/panels/p1.png" id="1_1m3jt"]
[ext_resource type="Script" path="res://pages/page_1.gd" id="1_d6ht8"]
[ext_resource type="Texture2D" uid="uid://dj5iwemkry02y" path="res://assets/panels/p2.png" id="2_eb17b"]
[ext_resource type="Texture2D" uid="uid://58vr2vo8c367" path="res://assets/panels/p3.png" id="3_6n2hb"]
[ext_resource type="Texture2D" uid="uid://bnaxr56m0rwl1" path="res://assets/panels/p4.png" id="4_okhgg"]
[ext_resource type="Texture2D" uid="uid://dqna524hc6h6d" path="res://assets/panels/p5.png" id="5_nqyqd"]
[ext_resource type="Texture2D" uid="uid://oh8wk3v5wpvm" path="res://assets/panels/p6.png" id="6_2pt0u"]
[ext_resource type="FontFile" uid="uid://br1u4dxauauu6" path="res://ui/fonts/Kenney Pixel.ttf" id="7_atvsa"]
[ext_resource type="StyleBox" uid="uid://j4ctwlqgumi" path="res://ui/text_normal.tres" id="8_qvrvx"]

[node name="Page1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d6ht8")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 960.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Panels" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="P1" type="Sprite2D" parent="Panels"]
position = Vector2(182, 309)
scale = Vector2(1.05938, 1.05938)
texture = ExtResource("1_1m3jt")

[node name="Label" type="Label" parent="Panels"]
layout_mode = 0
offset_left = 52.0
offset_top = 33.0
offset_right = 332.0
offset_bottom = 148.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_atvsa")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("8_qvrvx")
text = "PORK CHOP 
SANDWICHES!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2" type="Sprite2D" parent="Panels"]
position = Vector2(648, 262)
scale = Vector2(1.24437, 1.24437)
texture = ExtResource("2_eb17b")

[node name="Label2" type="Label" parent="Panels"]
layout_mode = 0
offset_left = 340.0
offset_top = 301.0
offset_right = 620.0
offset_bottom = 416.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_atvsa")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("8_qvrvx")
text = "Oh shit, 
we're dead!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P3" type="Sprite2D" parent="Panels"]
position = Vector2(534, 561)
texture = ExtResource("3_6n2hb")

[node name="Label3" type="Label" parent="Panels"]
layout_mode = 0
offset_left = 37.0
offset_top = 609.0
offset_right = 493.0
offset_bottom = 724.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_atvsa")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("8_qvrvx")
text = "Move, you stupid idots,
 get the FUCK out!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P4" type="Sprite2D" parent="Panels"]
position = Vector2(1182, 275)
texture = ExtResource("4_okhgg")

[node name="Label4" type="Label" parent="Panels"]
layout_mode = 0
offset_left = 1002.0
offset_top = 108.0
offset_right = 1310.0
offset_bottom = 172.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_atvsa")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("8_qvrvx")
text = "What you say!?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P5" type="Sprite2D" parent="Panels"]
position = Vector2(1646, 298)
texture = ExtResource("5_nqyqd")

[node name="Label5" type="Label" parent="Panels"]
layout_mode = 0
offset_left = 1511.0
offset_top = 38.0
offset_right = 1863.0
offset_bottom = 153.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_atvsa")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("8_qvrvx")
text = "All your base
are belong to us."
horizontal_alignment = 1
vertical_alignment = 1

[node name="P6" type="Sprite2D" parent="Panels"]
position = Vector2(1431, 703)
scale = Vector2(0.84, 0.84)
texture = ExtResource("6_2pt0u")

[node name="Label6" type="Label" parent="Panels"]
layout_mode = 0
offset_left = 1140.0
offset_top = 868.0
offset_right = 1760.0
offset_bottom = 983.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_atvsa")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("8_qvrvx")
text = "You have no chance to survive.
Make your time."
horizontal_alignment = 1
vertical_alignment = 1
